--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Audio Player PWA</title>
-  <link rel="manifest" href="manifest.json">
+  <title>Audio Player</title>
+  <link rel="manifest" href="manifest.json" />
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>🎵 My Audio Player</h1>
-  <div id="playlist"></div>
-
+  <h1>🎵 Audio Player</h1>
+  <input type="file" id="fileInput" accept="audio/m4a" />
+  <p id="filename"></p>
   <audio id="audio" controls></audio>
 
   <script src="script.js"></script>
