--- a/index.html
+++ b/index.html
@@ -5,7 +5,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Audio Player</title>
   <link rel="manifest" href="manifest.json" />
-  <link rel="stylesheet" href="style.css" />
+  <style>
+    body {
+      font-family: sans-serif;
+      text-align: center;
+      background: #111;
+      color: #fff;
+      padding: 2rem;
+    }
+    
+    audio {
+      margin-top: 1rem;
+      width: 90%;
+      max-width: 600px;
+    }
+    
+    input[type="file"] {
+      margin: 1rem 0;
+    }
+    </style>
 </head>
 <body>
   <h1>🎵 Audio Player</h1>
